<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">有范</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="headline">头条</string>
    <string name="circle">圈子</string>
    <string name="card">卡片</string>
    <string name="mine">我的</string>
    <string name="mine_message">消息</string>
    <string name="mine_topic">我的话题</string>
    <string name="mine_favorite">收藏夹</string>
    <string name="mine_wallet">钱包</string>
    <string name="mine_card">同城卡</string>
    <string name="mine_setting">设置</string>
    <string name="mine_fans">粉丝</string>
    <string name="mine_attention">关注</string>
    <string name="mine_score">积分</string>
    <string name="mine_personal">个人资料</string>
    <string name="mine_personal_icon">头像</string>
    <string name="mine_personal_mobile">绑定手机号</string>
    <string name="mine_personal_birth">生日</string>
    <string name="mine_personal_gender">性别</string>
    <string name="mine_personal_signature">个性签名</string>
    <string name="mine_setting_pwd">修改密码</string>
    <string name="mine_setting_message">消息通知</string>
    <string name="mine_setting_cache">清除缓存</string>
    <string name="mine_setting_version">版本检查</string>
    <string name="mine_setting_feedback">意见反馈</string>
    <string name="mine_setting_recommend">推荐给朋友</string>
    <string name="mine_setting_about">关于我们</string>
    <string name="mine_setting_binding">帐号绑定</string>
    <string name="mine_updatepwd">修改密码</string>
    <string name="mine_updatepwd_old">旧密码</string>
    <string name="mine_updatepwd_old_hit">帐号密码</string>
    <string name="mine_updatepwd_new">新密码</string>
    <string name="weixin">微信绑定</string>
    <string name="add_circle">添加圈子</string>
    <string name="pure_activity">活跃榜</string>
    <string name="sgin">签到</string>
    <string name="search">搜索</string>
    <string name="tag">标签</string>
    <string name="mine_start">我发起的</string>
    <string name="mine_join">我参与的</string>
    <string name="join_circle">加入的圈子</string>
    <string name="expand_all">展开全部</string>
    <string name="send_directmessage">发私信</string>
    <string name="cancel_the_attention">取消关注</string>
    <string name="mine_mytopic_mythread">我发起的</string>
    <string name="mine_mytopic_mycomment">我参与的</string>
    <string name="exit_circle">退出圈子</string>
    <string name="login">登录</string>
    <string name="login_out">退出登录</string>
    <string name="login_mobile_hit">手机号码</string>
    <string name="login_pwd_hit">密码</string>
    <string name="login_pwd_forget">忘记密码</string>
    <string name="login_register">注册帐号</string>
    <string name="login_wx">用微信帐号登录</string>
    <string name="register">注册</string>
    <string name="register_mobile">手机号</string>
    <string name="register_verify">验证码</string>
    <string name="register_verify_hit">短信验证码</string>
    <string name="register_verify_get">获取验证码</string>
    <string name="register_nickname">昵称</string>
    <string name="register_nickname_hit">全中文或英文字符</string>
    <string name="register_pwd_hit">至少6个字符</string>
    <string name="change_city">选择城市</string>
    <string name="hot_circle">热门圈子</string>
    <string name="circle_activitylist">圈活跃榜</string>
    <string name="cacle_attention">取消关注</string>
    <string name="cameraman">摄影师</string>
    <string name="ranking_rules">排名规则</string>
    <string name="applyfor_certification">申请认证</string>
    <string name="to_issue_a_name">给话题取个名字吧</string>
    <string name="input_content_hint">说点什么吧</string>
    <string name="one_pic_text_tip">添加图片</string>
    <string name="publish">发布</string>
    <string name="cancle">取消</string>
    <string name="finlish">完成</string>
    <string name="input_search_keyword">请输入搜索关键字</string>
    <!-- 多图选择 -->
    <string name="choice_pics_is_compress">原图</string>
    <string name="choice_pics_num_tip_init">完成(0/8)</string>
    <string name="choice_pics_num_tip">完成(%1$d/%2$d)</string>
    <string name="max_choice_photo_num_tip">最多只能选择%1$d张图片喔!</string>
    <string name="had_choice_the_photo_tip">您已经选过该图片了!</string>
    <string name="tag_tips">认真打好每一种标签，才有机会进入热门哦，而且还会更容易被搜索到。</string>
    <string name="add_tag">添加标签</string>
    <string name="select_tag">选择标签</string>
    <string name="nulltag">没有标签可以选择</string>
    <string name="recommend">推荐</string>
    <string name="nearby">附近</string>
    <string name="ThreadPosting_title_empty">标题不能为空哦，先为您的帖子取个标题吧</string>
    <string name="ThreadPosting_content_empty">内容不能为空哦，还是说点什么吧~</string>
    <string name="nearest_search">最近搜索</string>
    <string name="clear_search_history">清除历史记录</string>
    <string name="topic">话题</string>
    <string name="user">用户</string>
    <string name="title_activity_mine">MineActivity</string>
    <string name="title_activity_life_circle_base">LifeCircleBaseActivity</string>
    <string name="title_activity_circle">CircleActivity</string>
    <string name="title_activity_add_circle">AddCircleActivity</string>
    <string name="title_activity_pure_text">PureTextActivity</string>
    <string name="title_activity_my_fav">MyFavActivity</string>
    <string name="title_activity_my_topiv">MytopicActivity</string>
    <string name="title_activity_person_home_page">PersonHomePageActivity</string>
    <string name="title_activity_my_concern">MyConcernActivity</string>
    <string name="title_activity_circleintroduce">CircleintroduceActivity</string>
    <string name="title_activity_active_list">ActiveListActivity</string>
    <string name="title_activity_pic_circle">PicCircleActivity</string>

    <!-- 圈子帖子 -->
    <string name="lifecircle_tip_content">正文</string>
    <string name="lifecircle_tip_cancle">取消</string>
    <string name="lifecircle_tip_publisher">楼主</string>
    <string name="null_txt"></string>
    <string name="lifecircle_tip_load_more">更多%1$d条回复</string>
    <string name="title_activity_specialrole">SpecialroleActivity</string>
    <string name="title_activity_publish">PublishActivity</string>
    <string name="title_activity_tagarray">TagarrayActivity</string>
    <string name="about_content1">同城圈是福建省最大的生活消费社区，</string>
    <string name="about_content2">致力于本地用户生活消费服务。</string>
    <string name="about_content3">目前有厦门、漳州、福州、泉州、晋江五个分站，</string>
    <string name="about_content4">覆盖用户数超过200万，以“关爱、分享、互助、&#160;&#160;&#160;</string>
    <string name="about_content5">交流”的网络精神影响年轻一代的网民。&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="about_copyright1">Copyright 2003-2014</string>
    <string name="about_copyright2">福建海都小鱼网络股份有限公司</string>
    <string name="title_activity_home_search">HomeSearchActivity</string>
    <string name="title_activity_search_resulte">SearchResulteActivity</string>
    <!-- 消息 -->
    <string name="ufun_chat_send">发送</string>

</resources>