<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/ufun_topbar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadingEdge="none"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mine_top_bg"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:paddingTop="20dip">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/login_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dip"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/design_size_30" />

                <TextView
                    android:id="@+id/about_version_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dip"
                    android:text="Android 1.01版"
                    android:textColor="@color/sub_heading_text"
                    android:textSize="@dimen/design_size_24" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingBottom="20dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:paddingTop="20dip">

                <TextView
                    android:id="@+id/about_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/about_content1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/design_size_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dip"
                    android:text="@string/about_content2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/design_size_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dip"
                    android:text="@string/about_content3"
                    android:textColor="@color/black"
                    android:textSize="@dimen/design_size_20" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dip"
                    android:text="@string/about_content4"
                    android:textColor="@color/black"
                    android:textSize="@dimen/design_size_20" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dip"
                    android:text="@string/about_content5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/design_size_20" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:gravity="bottom"
                android:orientation="vertical"
                android:paddingBottom="20dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:paddingTop="20dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/about_copyright1"
                    android:textColor="@color/sub_heading_text"
                    android:textSize="@dimen/design_size_20" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dip"
                    android:text="@string/about_copyright2"
                    android:textColor="@color/sub_heading_text"
                    android:textSize="@dimen/design_size_20" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>