<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dip">

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadingEdge="none"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingLeft="35dip"
                android:paddingRight="35dip">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dip"
                    android:src="@drawable/login_logo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dip"
                    android:background="@drawable/login_tab_bg"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dip"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="15dip"
                        android:paddingRight="15dip">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/login_mobile" />

                        <EditText
                            android:id="@+id/login_mobile"
                            style="@style/edittext"
                            android:layout_marginLeft="8dip"
                            android:background="@null"
                            android:gravity="center_vertical"
                            android:hint="@string/login_mobile_hit"
                            android:inputType="phone"
                            android:maxLength="15"></EditText>
                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="0.3dip"
                        android:background="@color/login_line" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dip"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="15dip"
                        android:paddingRight="15dip">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/login_pwd" />

                        <EditText
                            android:id="@+id/login_pwd"
                            style="@style/edittext"
                            android:layout_marginLeft="8dip"
                            android:gravity="center_vertical"
                            android:hint="@string/login_pwd_hit"
                            android:inputType="textPassword"
                            android:maxLength="30"></EditText>
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="50dip"
                    android:layout_marginTop="20dip"
                    android:background="@drawable/btn_blue"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/design_size_28" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dip"
                    android:layout_marginTop="30dip"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/mine_follows_ll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/login_pwd_forget"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:gravity="right"
                            android:text="@string/login_pwd_forget"
                            android:textColor="@color/sub_heading_text"
                            android:textSize="@dimen/design_size_24" />
                    </LinearLayout>

                    <View
                        android:layout_width="0.7dip"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dip"
                        android:layout_marginRight="20dip"
                        android:background="@color/login_line" />

                    <LinearLayout
                        android:id="@+id/mine_fans_ll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/login_register"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:text="@string/login_register"
                            android:textColor="@color/sub_heading_text"
                            android:textSize="@dimen/design_size_24" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dip"
                android:background="@color/line_color" />

            <LinearLayout
                android:id="@+id/login_wx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dip"
                android:layout_marginTop="18dip"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/wx_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dip"
                    android:text="@string/login_wx"
                    android:textColor="@color/sub_heading_text"
                    android:textSize="@dimen/design_size_24" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>